# mamantenok-back

./: .gitignore  manage.py  pyproject.toml
Mamantenok/: asgi.py  settings.py  urls.py  wsgi.py
